# SimPy

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  download_backends.py  download_includes.py
assets/: resources.rc
config_folder/: kernel_config.json
download_scripts/: download_backends.py  download_ide_dependencies.py
include/: TextEditor.cpp  TextEditor.h  imgui_markdown.h
include/ide_dependencies/: TextEditor.cpp  TextEditor.h
src/: main.cpp  pch.cpp  pch.h
src/GUI_module/: .gitignore  main_window.cpp  main_window.h
src/blueprints/core/project/: ProjectMetadata.cpp  ProjectMetadata.h
src/blueprints/core/structures/: BasicBlock.h  Blocks.cpp  Blocks.h  Connection.h  Model.cpp  Model.h
src/blueprints/data/data_sender/: DataChannelManager.cpp  DataChannelManager.h  ESPCommunication.cpp  ESPCommunication.h
src/blueprints/data/math/digital_signal_processing/: DSP.cpp  DSP.h
src/blueprints/data/math/math_help_fun/: MathHelperFunctions.cpp
src/blueprints/data/math/matrix_operation/: MatrixOperations.cpp  MatrixOperations.h
src/blueprints/data/math/solvers/: ISolverMethod.h  Solver.h  SolverManager.cpp  SolverMethod.cpp  SolverMethod.h
src/blueprints/gui/: BluePrintTab.cpp  BluePrintTab.h  GUICore.cpp  GUICore.h
src/blueprints/gui/managers/: BasicManager.cpp  BasicManager.h
src/blueprints/gui/managers/files/: FileManager.cpp  FileManager.h
src/blueprints/gui/managers/viewport/: ConnectionManager.cpp  ConnectionManager.h  ViewportManager.cpp
src/blueprints/gui/managers/windows/: BlocksManager.cpp  BlocksManager.h  DockableWindowManager.cpp  DockableWindowManager.h
src/blueprints/gui/ui/: UIPreferences.h
src/code_edit_block/: BaseCell.h  CodeCell.cpp  CodeCell.h  MarKDownCell.cpp  MarkDownCell.h
src/core/project/: ProjectMetadata.h
src/core/structures/: BacisBlock.cpp  BasicBlock.cpp  BasicBlock.h  Blocks.cpp  Blocks.h  Connection.cpp  Connection.h  Model.cpp  Model.h
src/data/: blocks.cpp  blocks.h  structures.cpp  structures.h
src/data/data_sender/: DataChannelManager.cpp  DataChannelManager.h  ESPCommunication.cpp  ESPCommunication.h  ESP_communication.cpp  data_channel_manager.cpp  data_channel_manager.h
src/data/math/digital_signal_processing/: DSP.cpp  DSP.h
src/data/math/math_help_fun/: MathHelperFunctions.cpp  MathHelperFunctions.h  math_help_fun.cpp  math_help_fun.h
src/data/math/matrix_operation/: MatrixOperations.cpp  MatrixOperations.h  matrix_op.cpp  matrix_op.h
src/data/math/solvers/: ISolverMethod.h  Solver.cpp  Solver.h  SolverManager.cpp  SolverManager.h  SolverMethod.cpp  solver.cpp  solver.h  solverManager.cpp  solverManager.h  solverMethod.cpp  solverMethod.h
src/data/serialization/: blocksSerialization.h  structureSerialization.cpp  structuresSerialization.h
src/files/: FileManager.cpp  FileManager.h
src/gui/: GUICore.cpp  GUICore.h  guiClass.cpp  guiClass.h
src/gui/files/: FileManager.cpp  FileManager.h
src/gui/managers/files/: FileManager.cpp  FileManager.h
src/gui/managers/viewport/: ConnectionManager.cpp  ConnectionManager.h  ViewportManager.h
src/gui/managers/windows/: BlocksManager.cpp  BlocksManager.h  DockableWindowManager.cpp  DockableWindowManager.h
src/gui/serialization/: guiClassSerialization.cpp  guiClassSerialization.h
src/gui/ui/: UIPreferences.h  UIStyles.h
src/gui/viewport/: ConnectionManager.cpp  ConnectionManager.h  ViewportManager.cpp  ViewportManager.h
src/gui/windows/: BlocksManager.cpp  BlocksManager.h  DockableWindowManager.cpp  DockableWindowManager.h
src/ide/: NotebookTab.cpp  NotebookTab.h  mainWindow.cpp  mainWindow.h
src/ide/core/SimPy_venv/SimPy_venv/: pyvenv.cfg
src/ide/core/file_manipulation/: FileSystemService.cpp  FileSystemService.h  FileUtils.cpp  FileUtils.h
src/ide/core/python_kernel/: PythonKernel.cpp  PythonKernel.h
src/ide/gui/code_editor/: BaseTab.h  BaseTag.cpp  BaseTile.cpp  BaseTile.h  notebookTab.cpp  notebookTab.h  notebookTile.cpp  notebookTile.h  textEditorTile.h
src/ide/gui/code_editor/cells/: baseCell.h  codeCell.cpp  codeCell.h  marddownCell.cpp  mardownCell.h
src/ide/gui/core/: FileSystemService.cpp
src/ide/gui/core/file_manipulation/: FileUtils.cpp  FileUtils.h
src/ide/gui/core/python_kernel/: PythonKernel.cpp  PythonKernel.h  kernel.py  plot_config.py
src/ide/gui/managers/: TabManager.cpp  TabManager.h  TileManager.h
src/ide/gui/ui/: notebookTab.h  textEditorTab.cpp  textEditorTab.h  workSpace.cpp  workSpace.h
src/ide/gui/ui/cells/: codeCell.cpp  codeCell.h  mardownCell.h
src/json_config_module/: file_menager.cpp  file_menager.h  kernel_config.json  openFile.cpp  openFile.h
src/python_kernel/: PythonKernel.cpp  PythonKernel.h  kernel.py
src/tabs/: TabManager.cpp  TabManager.h  TabModule.cpp  TabModule.h
src/ui/: UIStyles.h
src/workspace/: workSpace.cpp  workSpace.h
src/workspace/file_manipulation/: FileSystemService.h  FileUtils.cpp  FileUtils.h
tests/: test.cpp
tests/data_tests/: t_structures.cpp  test_sender.cpp  test_sender.h  test_structures.cpp  test_structures.h
tests/python_tests/: data_sender_tests.py
